--- a/src/main/resources/com/example/proyectomultihilos/bookshelve.fxml
+++ b/src/main/resources/com/example/proyectomultihilos/bookshelve.fxml
@@ -2,14 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="1068.0" style="-fx-background-color: #587369;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
@@ -19,13 +19,6 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <TableView layoutX="63.0" layoutY="113.0" prefHeight="452.0" prefWidth="651.0" style="-fx-background-color: #587369;">
-        <columns>
-          <TableColumn prefWidth="181.0" text="Isbn" />
-          <TableColumn minWidth="0.0" prefWidth="265.0" text="Titile" />
-            <TableColumn minWidth="0.0" prefWidth="204.0" text="Author" />
-        </columns>
-      </TableView>
       <GridPane layoutX="836.0" layoutY="298.0" prefHeight="203.0" prefWidth="167.0">
         <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -55,5 +48,47 @@
             <Image url="@../img/arrow.png" />
          </image>
       </ImageView>
+      <Pane layoutX="88.0" layoutY="224.0" prefHeight="64.0" prefWidth="6.0" style="-fx-background-color: white;" />
+      <Pane layoutX="88.0" layoutY="224.0" prefHeight="6.0" prefWidth="478.0" style="-fx-background-color: white;" />
+      <Pane layoutX="560.0" layoutY="224.0" prefHeight="64.0" prefWidth="6.0" style="-fx-background-color: white;" />
+      <GridPane alignment="CENTER" layoutX="88.0" layoutY="133.0" prefHeight="91.0" prefWidth="478.0">
+        <columnConstraints>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="91.0" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.rowIndex="1" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="91.0" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
+      <Pane layoutX="88.0" layoutY="401.0" prefHeight="64.0" prefWidth="6.0" style="-fx-background-color: white;" />
+      <Pane layoutX="88.0" layoutY="401.0" prefHeight="6.0" prefWidth="478.0" style="-fx-background-color: white;" />
+      <Pane layoutX="560.0" layoutY="401.0" prefHeight="64.0" prefWidth="6.0" style="-fx-background-color: white;" />
+      <GridPane alignment="CENTER" layoutX="88.0" layoutY="310.0" prefHeight="91.0" prefWidth="478.0">
+         <columnConstraints>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="91.0" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.rowIndex="1" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="91.0" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
