--- a/src/main/resources/com/example/proyectomultihilos/bookshelve.fxml
+++ b/src/main/resources/com/example/proyectomultihilos/bookshelve.fxml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="1068.0" style="-fx-background-color: #587369;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="1068.0" style="-fx-background-color: #587369;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyectomultihilos.controller.BookshelveController">
    <children>
       <Label layoutX="451.0" layoutY="48.0" text="Literary Mirage " textFill="#f2a03d">
          <font>
@@ -31,9 +25,9 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="115.0" style="-fx-background-color: #C7D9A0; -fx-background-radius: 8px;" text="Insert" textFill="#d94e4e" />
-            <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="115.0" style="-fx-background-color: #C7D9A0; -fx-background-radius: 8px;" text="Editar" textFill="#d94e4e" GridPane.rowIndex="2" />
-            <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="115.0" style="-fx-background-color: #C7D9A0; -fx-background-radius: 8px;" text="Borrar" textFill="#d94e4e" GridPane.rowIndex="4" />
+            <Button fx:id="btnBorrow" mnemonicParsing="false" onAction="#borrowBook" prefHeight="35.0" prefWidth="115.0" style="-fx-background-color: #C7D9A0; -fx-background-radius: 8px;" text="Prestar" textFill="#d94e4e" />
+            <Button fx:id="btnReturn" mnemonicParsing="false" onAction="#returnBook" prefHeight="35.0" prefWidth="115.0" style="-fx-background-color: #C7D9A0; -fx-background-radius: 8px;" text="Devolver" textFill="#d94e4e" GridPane.rowIndex="2" />
+            <Button fx:id="btnUpdateInfo" mnemonicParsing="false" onAction="#updateInfo" prefHeight="35.0" prefWidth="115.0" style="-fx-background-color: #C7D9A0; -fx-background-radius: 8px;" text="Refrescar Información" textFill="#d94e4e" GridPane.rowIndex="4" />
          </children>
       </GridPane>
       <Label layoutX="734.0" layoutY="113.0" text="Numero de libros actualmente disponibles: " textFill="WHITE">
@@ -58,15 +52,20 @@
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="91.0" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.rowIndex="1" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="91.0" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Rectangle fx:id="rec1" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="91.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="26.0" GridPane.rowIndex="1" />
+            <Rectangle fx:id="rec2" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="91.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label rotate="-90.0" text="El quijote" textFill="#460707" GridPane.rowIndex="1" />
+
          </children>
       </GridPane>
       <Pane layoutX="88.0" layoutY="401.0" prefHeight="64.0" prefWidth="6.0" style="-fx-background-color: white;" />
@@ -86,9 +85,10 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="91.0" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.rowIndex="1" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="91.0" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Rectangle fx:id="rec3" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="91.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.rowIndex="1" />
+            <Rectangle fx:id="rec4" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="91.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
+      <TextArea fx:id="txtArea" layoutX="63.0" layoutY="503.0" prefHeight="116.0" prefWidth="521.0" />
    </children>
 </AnchorPane>
