--- a/src/main/resources/com/example/proyectomultihilos/login.fxml
+++ b/src/main/resources/com/example/proyectomultihilos/login.fxml
@@ -1,11 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="530.0" prefWidth="742.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyectomultihilos.controller.LoginController">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: #587369;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyectomultihilos.controller.LoginController">
    <children>
-      <Button fx:id="login" layoutX="296.0" layoutY="422.0" mnemonicParsing="false" onAction="#login" prefHeight="40.0" prefWidth="150.0" text="Log in" />
+      <Button fx:id="login" layoutX="425.0" layoutY="533.0" mnemonicParsing="false" onAction="#login" prefHeight="40.0" prefWidth="150.0" style="-fx-background-radius: 8px; -fx-background-color: #C7D9A0;" text="Log in" textFill="#587369">
+         <font>
+            <Font size="19.0" />
+         </font></Button>
+      <ImageView fitHeight="325.0" fitWidth="547.0" layoutX="229.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/logo.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="txtUser" layoutX="381.0" layoutY="363.0" prefHeight="33.0" prefWidth="238.0" promptText="User" style="-fx-background-color: none; -fx-border-color: #f2a03d; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: white; -fx-prompt-text-fill: #C7D9A0;" />
+      <PasswordField fx:id="txtPassword" layoutX="383.0" layoutY="440.0" prefHeight="33.0" prefWidth="238.0" promptText="Password" style="-fx-background-color: none; -fx-border-color: #f2a03d; -fx-border-style: hidden hidden solid hidden; -fx-text-fill: white; -fx-prompt-text-fill: #C7D9A0;" />
+      <Label fx:id="label" alignment="CENTER" layoutX="80.0" layoutY="612.0" prefHeight="28.0" prefWidth="838.0">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
