--- a/src/main/resources/com/example/proyectomultihilos/bookshelve.fxml
+++ b/src/main/resources/com/example/proyectomultihilos/bookshelve.fxml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="1068.0" style="-fx-background-color: #587369;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyectomultihilos.controller.BookshelveController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="1068.0" style="-fx-background-color: #587369;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyectomultihilos.controller.BookshelveController">
     <children>
         <Label layoutX="451.0" layoutY="48.0" text="Literary Mirage " textFill="#f2a03d">
             <font>
@@ -33,7 +40,7 @@
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label alignment="CENTER" layoutX="822.0" layoutY="154.0" text="Nuemro de libros" textFill="WHITE" />
+        <Label alignment="CENTER" layoutX="822.0" layoutY="154.0" text="Numero de libros" textFill="WHITE" />
         <Button layoutX="39.0" layoutY="31.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="49.0" style="-fx-background-color: #C7D9A0; -fx-background-radius: 8px;" textFill="#d94e4e" />
         <ImageView fitHeight="35.0" fitWidth="49.0" layoutX="46.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -46,9 +53,8 @@
         <GridPane alignment="CENTER" layoutX="88.0" layoutY="133.0" prefHeight="91.0" prefWidth="478.0">
             <columnConstraints>
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
@@ -66,11 +72,39 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="5.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="20.0" minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="20.0" minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Rectangle fx:id="rec2" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="96.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                <Label rotate="-90.0" text="El quijote" textFill="#460707" GridPane.rowIndex="5" />
-                <Rectangle fx:id="rec1" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="96.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="20.0" GridPane.rowIndex="4" />
+                <Rectangle fx:id="rec2" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="90.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                <Rectangle fx:id="rec1" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="90.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="20.0" GridPane.rowIndex="5" />
+            <Rectangle fx:id="rec5" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="87.0" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
 
             </children>
         </GridPane>
@@ -80,19 +114,46 @@
         <GridPane alignment="CENTER" layoutX="88.0" layoutY="310.0" prefHeight="91.0" prefWidth="478.0">
             <columnConstraints>
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Rectangle fx:id="rec3" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="91.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.rowIndex="1" />
-                <Rectangle fx:id="rec4" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="91.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Rectangle fx:id="rec3" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="98.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.rowIndex="5" />
+                <Rectangle fx:id="rec4" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="91.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" />
+            <Rectangle fx:id="rec6" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="91.0" layoutX="105.0" layoutY="11.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <Rectangle fx:id="rec7" arcHeight="5.0" arcWidth="5.0" fill="#b1cae1" height="91.0" layoutX="239.0" layoutY="10.0" onMouseClicked="#showBookInfo" stroke="BLACK" strokeType="INSIDE" width="18.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
             </children>
         </GridPane>
         <TextArea fx:id="txtArea" layoutX="63.0" layoutY="503.0" prefHeight="116.0" prefWidth="521.0" />
