--- a/src/main/resources/com/example/proyectomultihilos/bookshelve.fxml
+++ b/src/main/resources/com/example/proyectomultihilos/bookshelve.fxml
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="1068.0" style="-fx-background-color: #587369;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyectomultihilos.controller.BookshelveController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="1068.0" style="-fx-background-color: #587369;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyectomultihilos.controller.BookshelveController">
     <children>
         <Label layoutX="451.0" layoutY="48.0" text="Literary Mirage " textFill="#f2a03d">
             <font>
@@ -35,12 +28,12 @@
                 <Button fx:id="btnHistory" mnemonicParsing="false" onAction="#updateInfo" prefHeight="35.0" prefWidth="115.0" style="-fx-background-color: #C7D9A0; -fx-background-radius: 8px;" text="Refrescar Información" textFill="#d94e4e" GridPane.rowIndex="4" />
             </children>
         </GridPane>
-        <Label layoutX="734.0" layoutY="113.0" text="Numero de libros actualmente disponibles: " textFill="WHITE">
+        <Label layoutX="734.0" layoutY="113.0" text="Numero de libros actualmente disponibles:7 " textFill="WHITE">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <Label alignment="CENTER" layoutX="822.0" layoutY="154.0" text="Numero de libros" textFill="WHITE" />
+        <Label alignment="CENTER" layoutX="822.0" layoutY="154.0" textFill="WHITE" />
         <Button layoutX="39.0" layoutY="31.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="49.0" style="-fx-background-color: #C7D9A0; -fx-background-radius: 8px;" textFill="#d94e4e" />
         <ImageView fitHeight="35.0" fitWidth="49.0" layoutX="46.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
             <image>
